اضافه کردن منو و سایه به عکس

--- a/project/galeri.html
+++ b/project/galeri.html
@@ -1,38 +1,66 @@
-﻿<!doctype>
+<!doctype html />
 <html>
- <head>
-   <title>گالری</title>
- </head>
 
-  <body dir="rtl"> 
+<head>
+  <title>گالری</title>
+  <link href="style.css" rel="stylesheet" />
+  <link href="fonts/css/fontiran.css" rel="stylesheet" />
+</head>
 
- <img src="image/000-Basic-HTML-Codes.jpg" width="100%" height="50%"/>
+<body dir="rtl">
 
-<img src="image/web.jpg"/>
-<img src="image/domain.jpg"/>
-<img src="image/ftp.jpg"/>
-<img src="image/html-css.jpg"/>
-<img src="image/html5263.jpg"/>
-<img src="image/css3.jpg"/>
-<img src="image/compress400.jpg"/>
-<img src="image/landing-page1-300x300.png.jpg"/>
-<img src="image/emmet.jpg"/>
-<img src="image/bootstrap-1.jpg"/>
-<img src="image/table-responsive-300x300.jpg"/>
-<img src="image/b.jpg"/>
-<img src="image/css.jpg"/>
-<img src="image/style1-300x300.jpg"/>
-<img src="image/flexbox.jpg"/>
-<img src="image/uikit.jpg"/>
-<img src="image/personalization1-300x300.jpg"/>
-<img src="image/404-300x300.jpg"/>
-<img src="image/canvas-thumb.jpg"/>
-<img src="image/sass_1.jpg"/>
-<img src="image/inspect-1.jpg"/>
-<img src="image/Bower_400-300x300.jpg"/>
-<img src="image/grunt-300x300.png.jpg"/>
-<img src="image/CSSies-400-300x300.jpg"/>
+    <div id="header">
+        <h1>آموزش جامع HTML,CSS</h1>
+      </div>
+
+      <ul id="ul">
+          <li class="li"><a href="project.html">HOME</a></li>
+          <li class="li"><a href="fehrest.html">HTML</a></li>
+          <li class="li"><a href="#css">CSS</a></li>
+          <li class="li"><a href="#php">PHP</a></li>
+          <li class="li"><a href="#python">PYTHON</a></li>
+          <li class="li"><a href="#sql">SQL</a></li>
+          <li class="li"><a href="#javascript">JAVASCRIPT</a></li>
+          <li class="li"><a href="#bootstrap">BOOTSTRAP</a></li>
+          <li class="li"><a href="galeri.html">GALLERY</a></li>
+          <li class="li"><a href="#more">MORE</a></li>
+          <li class="li"><a href="sherkat konande.html">ABOUT</a></li>
+        </ul>
+
+        <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" />
+    </br></br>
 
 
-  </body>
+  <img class="image" src="image/web.jpg" width="300" height="300"/>
+  <img class="image" src="image/domain.jpg" width="300" height="300"/>
+  <img class="image" src="image/ftp.jpg" width="300" height="300"/>
+  <img class="image" src="image/html-css.jpg" width="300" height="300"/>
+  <img class="image" src="image/html5263.jpg" width="300" height="300"/>
+  <img class="image" src="image/css3.jpg" width="300" height="300"/>
+  <img class="image" src="image/compress400.jpg" width="300" height="300"/>
+  <img class="image" src="image/landing-page1-300x300.png.jpg" width="300" height="300"/>
+  <img class="image" src="image/emmet.jpg" width="300" height="300"/>
+  <img class="image" src="image/bootstrap-1.jpg" width="300" height="300"/>
+  <img class="image" src="image/table-responsive-300x300.jpg" width="300" height="300"/>
+  <img class="image" src="image/b.jpg" width="300" height="300"/>
+  <img class="image" src="image/css.jpg" width="300" height="300"/>
+  <img class="image" src="image/style1-300x300.jpg" width="300" height="300"/>
+  <img class="image" src="image/flexbox.jpg" width="300" height="300"/>
+  <img class="image" src="image/uikit.jpg" width="300" height="300"/>
+  <img class="image" src="image/personalization1-300x300.jpg" width="300" height="300"/>
+  <img class="image" src="image/404-300x300.jpg" width="300" height="300"/>
+  <img class="image" src="image/canvas-thumb.jpg" width="300" height="300"/>
+  <img class="image" src="image/sass_1.jpg" width="300" height="300"/>
+  <img class="image" src="image/inspect-1.jpg" width="300" height="300"/>
+  <img class="image" src="image/Bower_400-300x300.jpg" width="300" height="300"/>
+  <img class="image" src="image/grunt-300x300.png.jpg" width="300" height="300"/>
+  <img class="image" src="image/CSSies-400-300x300.jpg" width="300" height="300"/>
+
+
+  <div id="footer">
+    <h2><a href="project.html"> back </a></h2>
+  </div>
+
+</body>
+
 </html>
