--- a/project/project.html
+++ b/project/project.html
@@ -1,4 +1,4 @@
-﻿<!doctype html />
+<!doctype html />
 <html>
 
 <head>
@@ -9,12 +9,25 @@
 </head>
 
 <body dir="rtl">
-  <div id="header">
+ <div id="header">
     <h1>آموزش جامع HTML,CSS</h1>
   </div>
-  <div class="clear" style="height: 10px;"></div>
-  
-  <img src="image/000-Basic-HTML-Codes.jpg" width="100%" height="50%" />
+
+  <ul id="ul">
+      <li class="li"><a href="project.html">HOME</a></li>
+      <li class="li"><a href="fehrest.html">HTML</a></li>
+      <li class="li"><a href="#css">CSS</a></li>
+      <li class="li"><a href="#php">PHP</a></li>
+      <li class="li"><a href="#python">PYTHON</a></li>
+      <li class="li"><a href="#sql">SQL</a></li>
+      <li class="li"><a href="#javascript">JAVASCRIPT</a></li>
+      <li class="li"><a href="#bootstrap">BOOTSTRAP</a></li>
+      <li class="li"><a href="galeri.html">GALLERY</a></li>
+      <li class="li"><a href="#more">MORE</a></li>
+      <li class="li"><a href="sherkat konande.html">ABOUT</a></li>
+    </ul>
+
+  <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" /></br></br></br></br>
   <p>
     متاسفانه مشکلی که وجود داره این هست که دانشجویان در ابتدای مسیر دنبال چیزی هستن که جامع باشه و این از مسیر دورشون
     میکنه. لطفاً دنبال یک پکیج که همه چیز رو بهتون یاد بده نباشید. اگر اینطوری بود که به راحتی همه چیز در یک پکیج جمع
@@ -37,20 +50,6 @@
     صفحات وب خود را به خوبی بخش بندی کنیم. این کار به ربات گوگل کمک می کند تا بهتر صفحه ما را ایندکس نماید.</p>
 
   <img src="image/www-img-1.jpg" alt="www" />
-
-  <h2><a href="fehrest.html" target="blank">فهرست مطالب </a></h2>
-
-
-
-  <h2>
-    <a href="galeri.html" target="blank">گالری </a>
-
-  </h2>
-
-  <h2>
-    <a href="sherkat konande.html" target="blank">شرکت کنندگان </a>
-
-  </h2>
 
 </body>
 
