--- a/project/fehrest.html
+++ b/project/fehrest.html
@@ -26,7 +26,7 @@
       <li class="li"><a href="sherkat konande.html">ABOUT</a></li>
     </ul>
 
-    <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" /></br></br></br></br>
+    <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" /></br>
 
   <div id="sidebar">
     <h2>فهرست مطالب</h2>
@@ -65,7 +65,7 @@
       حالا با ساده ترین ابزار موجود میخوایم کار کنیم. لطفاً دفترچه یادداشت (Notepad) ویندوز رو باز کنین و شروع کنین به
       نوشتن.
     </p>
-    <img src="image/images1.jpg" />
+    <img class="image-main-content" src="image/images1.jpg" />
     <p>تگ DOCTYPE مخفف document type هست. معنیش این میشه که فایل ما از نوع HTML باشه. و این تگ در تمام سایت ها نوشته
       میشه
       و نوشتنش ضروریه.</br>
@@ -96,7 +96,7 @@
       هر
       تعداد که بخواین (البته با توجه به اندازه متن) می تونین از این تگ استفاده کنین.
     </p>
-    <img src="image/p.jpg" />
+    <img class="image-main-content" src="image/p.jpg" />
     <p>
       خب همون طور که می بینین خط اول، محتوای پاراگراف اولمون رو نوشته و خط دوم ، محتوای پاراگراف دوم رو نوشته. حالا این
       که
@@ -104,7 +104,7 @@
       بسپارین.
       خیلی جاها کاربرد داره.
     </p>
-    <img src="image/p1.jpg" /><hr>
+    <img class="image-main-content" src="image/p1.jpg" /><hr>
 
 
 
@@ -116,9 +116,9 @@
       تگ h1 بزرگترین و پر اهمیت ترین هست تا تگ h6که کوچک ترین و کم اهمیت ترینشون هست. به مثال زیر توجه کنین تا خوب متوجه
       بشین. یادتون نره که حتما ً تمرین بکنین چون بدون تمرین فایده نداره.
     </p>
-    <img src="image/head.jpg" />
+    <img class="image-main-content" src="image/head.jpg" />
     <p>نتیجه</p>
-    <img src="image/h.jpg" /><hr>
+    <img class="image-main-content" src="image/h.jpg" /><hr>
 
 
 
@@ -132,7 +132,7 @@
       نوشتن آی دی المان داخل href میشه این کر رو کرد).</br>فقط به یک نکته توجه داشته باشین که برای لینک شدن به یک سایت
       حتما باید پروتکل رو بنویسین (http ,ftp, …) وگرنه لینک کار نمی‌کنه.
     </p>
-    <img src="image/a.jpg" height="50%" /><hr>
+    <img class="image-main-content" src="image/a.jpg" height="50%" /><hr>
 
 
 
@@ -163,10 +163,10 @@
       های دیگه هم بستگی به کاربردشون میشه ازشون استفاده کرد. مثلاً صفت src رو دیدین که هم برا تگ
       <link> و هم برای تگ <img> ازش استفاده کردیم.
     </p>
-    <img src="image/img.jpg" height="50%" />
+    <img class="image-main-content" src="image/img.jpg" height="50%" />
     <p>حالا اگر بخواین که عکستون به جایی لینک بشه به راحتی هر چه تمام میتونین این کار رو انجام بدین. چجوری؟؟ این جوری که
       پایین براتون نوشتیم:</p>
-    <img src="image/img1.jpg" /><hr>
+    <img class="image-main-content" src="image/img1.jpg" /><hr>
 
 
 
@@ -181,8 +181,8 @@
       مانند از تگ UL استفاده می کنیم. که داخل اون تگ های LI قرار میگیرن. از تگ OL هم برای ساختن لیست های شمارشی استفاده
       میشه.
     </p>
-    <img src="image/list.jpg" />
-    <img src="image/list1.jpg" />
+    <img class="image-main-content" src="image/list.jpg" />
+    <img class="image-main-content" src="image/list1.jpg" />
     <p>تگ ol هم مشابه تگ ul نوشته میشه. کافیه که داخل کد بالا به جای ul بنویسین ol ، تا لیست شمارشی هم ایجاد بشه.</p>
     </br>
 
