--- a/project/project.html
+++ b/project/project.html
@@ -27,7 +27,7 @@
       <li class="li"><a href="sherkat konande.html">ABOUT</a></li>
     </ul>
 
-  <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" /></br></br></br></br>
+  <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" /></br>
   <p>
     متاسفانه مشکلی که وجود داره این هست که دانشجویان در ابتدای مسیر دنبال چیزی هستن که جامع باشه و این از مسیر دورشون
     میکنه. لطفاً دنبال یک پکیج که همه چیز رو بهتون یاد بده نباشید. اگر اینطوری بود که به راحتی همه چیز در یک پکیج جمع
