--- a/project/galeri.html
+++ b/project/galeri.html
@@ -27,10 +27,8 @@
           <li class="li"><a href="sherkat konande.html">ABOUT</a></li>
         </ul>
 
-        <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" />
-    </br></br>
-
-
+        <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" /></br>
+        
   <img class="image" src="image/web.jpg" width="300" height="300"/>
   <img class="image" src="image/domain.jpg" width="300" height="300"/>
   <img class="image" src="image/ftp.jpg" width="300" height="300"/>
