--- a/project/sherkat konande.html
+++ b/project/sherkat konande.html
@@ -27,7 +27,7 @@
         <li class="li"><a href="sherkat konande.html">ABOUT</a></li>
       </ul>
 
-  <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" /></br></br></br>
+  <img class="shadow" src="image/170427-636923997581008095-16x9.jpg" width="100%" height="50%" /></br>
   <div class="clear" style="height: 10px;"></div>
 
   <div id="name">
