--- a/project/fehrest.html
+++ b/project/fehrest.html
@@ -22,7 +22,7 @@
       <li class="li"><a href="#javascript">JAVASCRIPT</a></li>
       <li class="li"><a href="#bootstrap">BOOTSTRAP</a></li>
       <li class="li"><a href="galeri.html">GALLERY</a></li>
-      <li class="li"><a href="#more">MORE</a></li>
+      <li class="li"><a href="price.html">MORE</a></li>
       <li class="li"><a href="sherkat konande.html">ABOUT</a></li>
     </ul>
 
