--- a/project/project.html
+++ b/project/project.html
@@ -5,6 +5,7 @@
   <title>آموزش HTML,CSS</title>
   <link href="style.css" rel="stylesheet" />
   <link href="fonts/css/fontiran.css" rel="stylesheet" />
+  
 
 </head>
 
@@ -23,7 +24,7 @@
       <li class="li"><a href="#javascript">JAVASCRIPT</a></li>
       <li class="li"><a href="#bootstrap">BOOTSTRAP</a></li>
       <li class="li"><a href="galeri.html">GALLERY</a></li>
-      <li class="li"><a href="#more">MORE</a></li>
+      <li class="li"><a href="price.html">MORE</a></li>
       <li class="li"><a href="sherkat konande.html">ABOUT</a></li>
     </ul>
 
