add position and edite gallery

--- a/project/price.html
+++ b/project/price.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>لیست محصولات</title>
-    <link href="style.css" rel="stylesheet" />
     <link href="fonts/css/fontiran.css" rel="stylesheet" />
     <link href="style-price.css" rel="stylesheet" />
 </head>
@@ -15,10 +14,12 @@
         <ul id="product-gallery">
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" alt="" /></a>
+                    <a class="product-img" href="#"><img src="image/index.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy" /></a>
                     <div class="clear" style="height: 10px;"></div>
-                    <a class="product-title" href="#">مبایل سامسونگ</a>
+                    <a class="product-title" href="#">Samsung Galaxy</a>
                     <div class="product-price">3/000/000 تومان</div>
+
                     <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
                 </div>
             </li>
@@ -26,9 +27,9 @@
 
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" alt="" /></a>
+                    <a class="product-img" href="#"><img src="image/shopping.jpg" width="123px;" height="155px;" alt="Samsung Galaxy A2" /></a>
                     <div class="clear" style="height: 10px;"></div>
-                    <a class="product-title" href="#">مبایل سامسونگ</a>
+                    <a class="product-title" href="#">Samsung Galaxy A2</a>
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
                 </div>
@@ -36,9 +37,10 @@
 
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" alt="" /></a>
+                    <a class="product-img" href="#"><img src="image/shopping1.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A80-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
-                    <a class="product-title" href="#">مبایل سامسونگ</a>
+                    <a class="product-title" href="#">Samsung Galaxy A80-128G</a>
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
                 </div>
@@ -46,9 +48,10 @@
 
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" alt="" /></a>
+                    <a class="product-img" href="#"><img src="image/shopping2.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A80-64G" /></a>
                     <div class="clear" style="height: 10px;"></div>
-                    <a class="product-title" href="#">مبایل سامسونگ</a>
+                    <a class="product-title" href="#"> Samsung Galaxy A80-64G</a>
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
                 </div>
@@ -56,9 +59,10 @@
 
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" alt="" /></a>
+                    <a class="product-img" href="#"><img src="image/shopping.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A40-64G" /></a>
                     <div class="clear" style="height: 10px;"></div>
-                    <a class="product-title" href="#">مبایل سامسونگ</a>
+                    <a class="product-title" href="#">Samsung Galaxy A40-64G</a>
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
                 </div>
@@ -66,9 +70,10 @@
 
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" alt="" /></a>
+                    <a class="product-img" href="#"><img src="image/shopping4.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A2 core" /></a>
                     <div class="clear" style="height: 10px;"></div>
-                    <a class="product-title" href="#">مبایل سامسونگ</a>
+                    <a class="product-title" href="#">Samsung Galaxy A2 core</a>
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
                 </div>
@@ -76,24 +81,16 @@
 
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" alt="" /></a>
+                    <a class="product-img" href="#"><img src="image/shopping5.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A70-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
-                    <a class="product-title" href="#">مبایل سامسونگ</a>
-                    <div class="product-price">3/000/000 تومان</div>
-                    <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
-                </div>
-            </li>
-
-            <li>
-                <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" alt="" /></a>
-                    <div class="clear" style="height: 10px;"></div>
-                    <a class="product-title" href="#">مبایل سامسونگ</a>
+                    <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
                     <span>جدید</span>
                 </div>
             </li>
+
 
         </ul>
     </div>
