اصلاح لیست محصولات

--- a/project/price.html
+++ b/project/price.html
@@ -18,20 +18,22 @@
                             alt="Samsung Galaxy" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy</a>
-                    <div class="product-price">3/000/000 تومان</div>
-
-                    <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
+                    <div class="product-position-price">
+                        <div class="product-price">3/000/000 تومان</div>
+                        <a class="btn" href="#">اضافه به سبد خرید</a>
+                    </div>
                 </div>
             </li>
 
 
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/shopping.jpg" width="123px;" height="155px;" alt="Samsung Galaxy A2" /></a>
+                    <a class="product-img" href="#"><img src="image/shopping.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A2" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A2</a>
                     <div class="product-price">3/000/000 تومان</div>
-                    <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
                 </div>
             </li>
 
@@ -42,7 +44,7 @@
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A80-128G</a>
                     <div class="product-price">3/000/000 تومان</div>
-                    <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
                 </div>
             </li>
 
@@ -53,7 +55,7 @@
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#"> Samsung Galaxy A80-64G</a>
                     <div class="product-price">3/000/000 تومان</div>
-                    <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
                 </div>
             </li>
 
@@ -64,7 +66,7 @@
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A40-64G</a>
                     <div class="product-price">3/000/000 تومان</div>
-                    <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
                 </div>
             </li>
 
@@ -75,7 +77,7 @@
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A2 core</a>
                     <div class="product-price">3/000/000 تومان</div>
-                    <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
                 </div>
             </li>
 
@@ -86,11 +88,70 @@
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
                     <div class="product-price">3/000/000 تومان</div>
-                    <a class="add-to-cart" href="#">اضافه به سبد خرید</a>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
                     <span>جدید</span>
                 </div>
             </li>
 
+            <li>
+                <div class="product-item">
+                    <a class="product-img" href="#"><img src="image/shopping12.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A70-128G" /></a>
+                    <div class="clear" style="height: 10px;"></div>
+                    <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="product-price">3/000/000 تومان</div>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
+                    <span>جدید</span>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-item">
+                    <a class="product-img" href="#"><img src="image/shopping7.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A70-128G" /></a>
+                    <div class="clear" style="height: 10px;"></div>
+                    <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="product-price">3/000/000 تومان</div>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
+                    <span>جدید</span>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-item">
+                    <a class="product-img" href="#"><img src="image/shopping15.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A70-128G" /></a>
+                    <div class="clear" style="height: 10px;"></div>
+                    <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="product-price">3/000/000 تومان</div>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
+                    <span>جدید</span>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-item">
+                    <a class="product-img" href="#"><img src="image/shopping10.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A70-128G" /></a>
+                    <div class="clear" style="height: 10px;"></div>
+                    <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="product-price">3/000/000 تومان</div>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
+                    <span>جدید</span>
+                </div>
+            </li>
+
+            <li>
+                <div class="product-item">
+                    <a class="product-img" href="#"><img src="image/shopping12.jpg" width="123px;" height="155px;"
+                            alt="Samsung Galaxy A70-128G" /></a>
+                    <div class="clear" style="height: 10px;"></div>
+                    <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="product-price">3/000/000 تومان</div>
+                    <a class="btn" href="#">اضافه به سبد خرید</a>
+                    <span>جدید</span>
+                </div>
+            </li>
 
         </ul>
     </div>
