2pictures with main-img and side-img

--- a/project/price.html
+++ b/project/price.html
@@ -9,16 +9,35 @@
 
 
 <body>
+    <ul id="menubar" class="container">
+        <li><a href="#" alt="">صفحه اصلی</a></li>
+        <li><a href="#" alt="">ویدیوها</a></li>
+        <li><a href="#" alt="">مقالات</a></li>
+        <li><a href="#" alt="">کالای دیجیتال</a></li>
+        <li><a href="#" alt="">تماس با ما</a></li>
+        <li>
+            <a href="#" alt="">محصولات</a>
+          <ul>
+              <li><a href="#">موبایل</a></li>
+              <li><a href="#">یخچال</a></li>
+              <li><a href="#">تلویزیون</a></li>
+              <li><a href="#">کولر گازی</a></li>
+              <li><a href="#">لپ تاپ</a></li>
+          </ul>
+        </li>
+    </ul>
 
     <div class="container">
         <ul id="product-gallery">
             <li>
                 <div class="product-item">
-                    <a class="product-img" href="#"><img src="image/index.jpg" width="123px;" height="155px;"
-                            alt="Samsung Galaxy" /></a>
+                    <a class="product-img" href="#">
+                        <img class="main-img" src="image/index.jpg" width="123px;" height="155px;" alt="Samsung Galaxy" />
+                        <img class="side-img" src="image/shopping12.jpg" width="123px;" height="155px;" alt="Samsung Galaxy" />
+                    </a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy</a>
-                    <div class="product-position-price">
+                    <div class="price-container">
                         <div class="product-price">3/000/000 تومان</div>
                         <a class="btn" href="#">اضافه به سبد خرید</a>
                     </div>
@@ -32,8 +51,10 @@
                             alt="Samsung Galaxy A2" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A2</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                </div>
                 </div>
             </li>
 
@@ -43,8 +64,10 @@
                             alt="Samsung Galaxy A80-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A80-128G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                </div>
                 </div>
             </li>
 
@@ -54,8 +77,10 @@
                             alt="Samsung Galaxy A80-64G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#"> Samsung Galaxy A80-64G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                </div>
                 </div>
             </li>
 
@@ -65,8 +90,10 @@
                             alt="Samsung Galaxy A40-64G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A40-64G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                </div>
                 </div>
             </li>
 
@@ -76,8 +103,10 @@
                             alt="Samsung Galaxy A2 core" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A2 core</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                </div>
                 </div>
             </li>
 
@@ -87,8 +116,10 @@
                             alt="Samsung Galaxy A70-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                    </div>
                     <span>جدید</span>
                 </div>
             </li>
@@ -99,8 +130,10 @@
                             alt="Samsung Galaxy A70-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                    </div>
                     <span>جدید</span>
                 </div>
             </li>
@@ -111,8 +144,10 @@
                             alt="Samsung Galaxy A70-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                    </div>
                     <span>جدید</span>
                 </div>
             </li>
@@ -123,8 +158,10 @@
                             alt="Samsung Galaxy A70-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                    </div>
                     <span>جدید</span>
                 </div>
             </li>
@@ -135,9 +172,11 @@
                             alt="Samsung Galaxy A70-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
-                    <span>جدید</span>
+                    </div>
+                    <span>تخفیف</span>
                 </div>
             </li>
 
@@ -147,10 +186,13 @@
                             alt="Samsung Galaxy A70-128G" /></a>
                     <div class="clear" style="height: 10px;"></div>
                     <a class="product-title" href="#">Samsung Galaxy A70-128G</a>
+                    <div class="price-container">
                     <div class="product-price">3/000/000 تومان</div>
                     <a class="btn" href="#">اضافه به سبد خرید</a>
+                    </div>
                     <span>جدید</span>
                 </div>
+                
             </li>
 
         </ul>
