--- a/zhiarsoft/index.html
+++ b/zhiarsoft/index.html
@@ -85,6 +85,78 @@
         </div>
     </div>
 </header>
+<nav id="main-menu" class="navbar" role="navigation">
+    <!-- ::before -->
+    <div class="container">
+        <!-- ::before -->
+        <div class="navbar-header">
+            <!-- ::before -->
+            <button class="btn btn-navbar navbar-toggle" data-target=".navbar-cat-collapse" data-toggle="collapse" type="button">
+                    <span class="sr-only">منو</span>
+                    <i class="fa fa-bars fa-2x"></i>
+                </button>
+                <!-- ::after -->
+        </div>
+        <div class="collapse navbar-cat-collapse navbar-collapse">
+            <!-- ::before -->
+            <ul class="nav navbar-nav">
+                <!-- ::before -->
+                <li><a href="/">مقالات آموزشی</a></li>
+                <li><a href="/">جدیدترین ویدیوها</a></li>
+                <li><a href="/">محبوب ترین ویدیوها</a></li>
+                <li><a href="/">پرداخت اینترنتی</a></li>
+                <li><a href="/">سبد خرید</a></li>
+                <li><a href="/">اپلیکیشن آندرویدی</a></li>
+                <!-- ::after -->
+            </ul>
+            <!-- ::after -->
+        </div>
+        <!-- ::after -->
+    </div>
+    <!-- ::after -->
+</nav>
+<div class="main-container container">
+    <!-- ::before -->
+    <section class="products-list">
+        <div class="container">
+            <!-- ::before -->
+            <div class="row">
+                <!-- ::before -->
+                <h2 class="heading-with-border">ویدیوهای منتخب</h2>
+                <div class="clear" style="height: 15px"></div>
+                <div class="col-sm-3 col-xs-12">
+                    <div class="product-col" itemprop="" itemtype="http://schema.org/product">
+                        <meta itemprop="name" content="موی تای-تکنیک های پایه"></meta>
+                        <div class="product-picture">
+                        <a href="/"><img class="img-responsive" itemprop="image" src="img/thumbnail.ashx.jpg" /></a>
+                        </div>
+                        <h3 class="product-title">
+                            <a href="/">موی تای-تکنیک های پایه</a>
+                        </h3>
+                        <div class="product-price">
+                            <span>7.000 تومان</span>
+                            <span itemprop="offers" itemscope="" itemtype="http://schema.org/Offer">
+                                <meta itemprop="priceCurrency" content="IRR"><meta itemprop="price" content="70000">
+                            </span>
+                        </div>
+                        <div class="cart-button button-group add-to-cart-container">
+                        <button class="btn btn-cart add-to-cart" type="button">
+                            <i class="fa fa-shopping-cart">
+                                <!-- ::before -->
+                            </i>
+                            اضافه به سبد خرید
+                        </button>
+
+                        <span class="more-info"></span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+</div>
 </body>
 
 </html>
