edite fontawesome and fonts

--- a/zhiarsoft/index.html
+++ b/zhiarsoft/index.html
@@ -21,8 +21,9 @@
     <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="static/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
     <link href="static/bootstrap/css/bootstrap-rtl.css" rel="stylesheet" />
-    <link href="fontawesome/css/fontawesome.css" rel="stylesheet" />
+    <link href="static/fontawesome/css/fontawesome.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
+    <link href="../project/fonts/css/fontiran.css" rel="stylesheet" />
 
 </head>
 
