--- a/zhiarsoft/index.html
+++ b/zhiarsoft/index.html
@@ -64,7 +64,7 @@
                         <form action="http://www.google.com" method="get">
                             <div class="search-box">
                                 <input type="text" id="search" name="q" placeholder="search" />
-                                <i class="fa fa-search"></i>
+                                <i class="fa fa-search fa-2x"></i>
                             </div>
                         </form>
                     </div>
@@ -616,7 +616,6 @@
                         </div>
                     </div>
                     <div class="clear" style="height: 5px;"></div>
-                    <div class="clear" style="height: 30px;"></div>
                     <h2 class="heading-with-border">آخرین مطالب وبلاگ</h2>
                     <div class="clear" style="height: 15px;"></div>
 
