add footer (index)

--- a/project/project.html
+++ b/project/project.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+
   <title>آموزش HTML,CSS</title>
   <link href="style.css" rel="stylesheet" />
   <link href="fonts/css/fontiran.css" rel="stylesheet" />
