--- a/zhiarsoft/index.html
+++ b/zhiarsoft/index.html
@@ -4,26 +4,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="geo.region" content="IR">
 <script src="https://www.google-analytics.com/analytics.js" async=""></script>
-<script>
-    (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-12871245-1', 'auto');
-    ga('send', 'pageview');
-</script>
 
 <head>
     <title>zhiar.online</title>
     <link href="reset.css" rel="stylesheet" />
+    <link href="fonts/css/fontiran.css" rel="stylesheet" />
     <link href="static/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="static/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
     <link href="static/bootstrap/css/bootstrap-rtl.css" rel="stylesheet" />
     <link href="static/fontawesome/css/fontawesome.css" rel="stylesheet" />
     <link href="style.css" rel="stylesheet" />
-    <link href="../project/fonts/css/fontiran.css" rel="stylesheet" />
 
 </head>
 
@@ -31,7 +21,7 @@
     <span id="cart-container-float" class="colxs-12 shoppingcart-container col-sm-2">
         <div class="center">
             <a href="/">
-            <span id="cart">سبد خرید(0) کالا</span>
+                <span id="cart">سبد خرید(0) کالا</span>
             </a>
             <div class="clear">جمع کل:0 تومان</div>
             <div class="clear" style="height: 5px"></div>
@@ -60,22 +50,22 @@
             </div>
             <div class="main-header">
                 <div class="row">
-                    <div class="col-sm-3 col-xs-12">
+                    <div class="col-sm-4 col-xs-12">
                         <form action="http://www.google.com" method="get">
                             <div class="search-box">
-                                <input type="text" id="search" name="q" placeholder="search" />
+                                <input type="text" id="search" name="q" placeholder="جستجو" />
                                 <i class="fa fa-search fa-2x"></i>
                             </div>
                         </form>
                     </div>
-                    <div class="col-sm-6 col-xs-12">
+                    <div class="col-sm-4 col-xs-12">
                         <div id="logo">
                             <a href="/">
                                 <img class="img-responsive" src="img/logo-zhiaronline.png" />
                             </a>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-xs-12">
+                    <div class="col-sm-4 col-xs-12">
                         <div id="cart" class="btn-group btn-block">
                             <div class="" id="cart-container">
                                 <button class="btn btn-block dropdown-toggle btn-lg" data-toggle="dropdown"
@@ -624,6 +614,274 @@
         </section>
 
     </div>
+    <div class="clear" style="height: 10px;"></div>
+
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post right">
+            <h2>
+                <a href="/"> چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx16.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+            اوکیناوا علاوه براینکه تنها جزیره گرمسیری ژاپن است بلکه دورترین جزیره آن نیز به حساب می آید که در جنوبی
+            ترین
+            قسمت ژاپن قرار دارد. به همین دلیل اوکیناوا فرهنگی متفاوت با ژاپن در زندگی افراد و کاراته دارد. همانطور
+            که می
+            دانید و بارها در مقالات
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post left">
+            <h2>
+                <a href="/"> سبک های حیوانات کونگ فو </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx17.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+            هنگامیکه مربی افسانه ای استیو ده ماسکو (Steve De Masco) در سال 1968 هنرهای رزمی را آغاز کرد دیدگاههای خود د
+            ر مورد جنبه های جسمی و
+             فلسفی 
+            هنرهای رزمی شائولین (و بطور خاص کمپوی شائولین) گشود. وی 
+            پس از صرف چندین دهه مطالعه، 5 سبک حیوانات کونگ 
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post right">
+            <h2>
+                <a href="/"> ویدیو: فینال مسابقات جهانی کاراته 2012  </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx18.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+در این ویدیو فینال مسابقات جهانی کاراته در سال 2012 در بخش کاتای گروهی مردان که بین تیم ژاپن 
+و ایتالیا برگزار شد را مشاهده خواهید کرد.
+در این مسابقات تیم ایتالیا پیشرفت چشمگیری نسبت
+ به دوران قبل پیدا کرده و در برابر ژاپن که در آن 
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post left">
+            <h2>
+                <a href="/"> چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx18.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+            اوکیناوا علاوه براینکه تنها جزیره گرمسیری ژاپن است بلکه دورترین جزیره آن نیز به حساب می آید
+             که در جنوبی ترین قسمت ژاپن قرار دارد. به همین دلیل اوکیناوا فرهنگی متفاوت با ژاپن در زندگی افراد
+              و کاراته دارد. همانطور که می دانید و بارها در مقالات 
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post right">
+            <h2>
+                <a href="/"> چگونه یک مربی خوب هنرهای رزمی پیدا کنیم؟ </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx19.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+            پیدا کردن یک مربی خوب هنرهای رزمی می تواند چالش بزرگی باشد. شما باید شخصی را پیدا کنید 
+            که بتواند دانش و مهارت خود را به راحتی به شما انتقال دهد و همچنین
+             شخصیت مناسبی برای آموزش داشته باشد. این چیزی نیست که فورا بتوانید آن را پیدا کنید و حتی 
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post left">
+            <h2>
+                <a href="/"> ویدیو: سیسلوستر استالونه، پیرمرد 71 ساله ای که هنوز مانند جوان ها تمرین می کند!  </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx20.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+سیلوستر استالونه (Sylvester Stallone) یک بازیگر و همچنین رزمی کار شگفت انگیز 
+است که اگر به فیلم های رزمی
+ علاقه
+ مند
+ باشید برای یک بار هم که شده فیلم های او را دیده اید. او در حالی که هم سن و سالانش 
+ دستکش های خود را تحویل داده اند هنوز هم 
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post right">
+            <h2>
+                <a href="/">کاراته یا بوکس؟ کدامیک برای mma بهتر هستند؟  </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx21.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+            فایترهای MMA می توانند 
+            از طیف گسترده ای از پیش زمینه ها از جوجیتسو گرفته تا تکواندو و کشتی 
+            بیایند. برای آمادگی در برابر انواع حریفان، مهم 
+            است که یک رزمی کار هنرهای رزمی ترکیبی (MMA)
+             ترکیبی از چند هنر رزمی مختلف را بداند. ضربات سنگین مشت بنای 
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post left">
+            <h2>
+                <a href="/"> 
+                    ویدیو:
+                     3 دلیل برای 
+                     اینکه بدانید که چرا یک فایتر mma باید تمرینات دو سرعتی را 
+                    انجام دهد </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx22.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+            هر رزمی کار خوب MMA باید پاهای قدرتمندی داشته باشد. این امر به
+             آنها اجازه می دهد که لگدهای 
+            ویرانگری بزنند، نحوه گلاویز شدن خود را بهبود دهند 
+            و انتقال قدرت به دستهای خود را به خوبی انجام دهند
+            . یکی از بهترین راهها برای بهبود قدرت پاهای رزمی 
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post right">
+            <h2>
+                <a href="/"> چرا باید اجازه دهید بچه ها هنرهای رزمی را یاد بگیرند!  </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx23.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div>
+بسیاری از افراد از ابتدای دوران بچگی با هنرهای رزمی رابطه برقرار می کنند
+. به دلیل جذابیت و خشن به نظر رسیدن هنرهای رزمی
+ ممکن است هنرهای رزمی جزء اولین چیزهایی باشند که بچه ها به
+ آن علاقه مند می شوند. بعضی اوقات والدین دوست دارند بچه های 
+        </div>
+    </div>
+
+    <div class="col-sm-6 col-xs-12">
+        <div class="brief-post left">
+            <h2>
+                <a href="/"> چگونه هنرهای رزمی می توانند به درمان اعتیاد کمک کنند؟ </a>
+            </h2>
+            <div class="clear" style="height: 5px;"></div>
+            <div class="list-blog-image">
+                <a href="/">
+                    <img src="img/thumbnail.ashx24.jpg" alt=" چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟ " />
+                </a>
+            </div> 
+            اگر شما به یک ماده یا سبک زندگی معتاد هستید و
+             می خواهید از شر آن خلاص شوید هنرهای رزمی می تواند
+             کمک خوبی برای این کار باشد. همه ما در یک مقطع 
+            از زندگی مان مجبور شده ایم با اعتیاد نبرد کنیم.
+             نوع اعتیاد ممکن است بی خطر باشد مانند اعتیاد 
+        </div>
+    </div>
+    <!-- ::after -->
+    </div>
+    <!-- ::after -->
+    </div>
+    </section>
+    <!-- ::after -->
+    </div>
+<div class="clear"></div>
+    <footer id="footer-area">
+        <div class="footer-links">
+            <div class="container">
+                <!-- ::before -->
+                <div class="col-sm-4 col-xs-12">
+                    <h5>آخرین مقالات</h5>
+                    <ul>
+                        <li>
+                            <!-- ::marker -->
+                            <i class="fa fa-angle-double-left"></i>
+                            <!-- ::before -->
+                            <a href="/">سبک های حیوانات کونگ فو </a>
+                        </li>
+                        <li>
+                            <!-- ::marker -->
+                            <i class="fa fa-angle-double-left"></i>
+                            <!-- ::before -->
+                            <a href="/">ویدیو: سیسلوستر استالونه، پیرمرد 71 ساله ای که هنوز مانند جوان ها تمرین می کند!  </a>
+                        </li>
+
+                        <li>
+                            <!-- ::marker -->
+                            <i class="fa fa-angle-double-left"></i>
+                            <!-- ::before -->
+                            <a href="/">ویدیو: فینال مسابقات جهانی کاراته 2012 </a>
+                        </li>
+
+                        <li>
+                            <!-- ::marker -->
+                            <i class="fa fa-angle-double-left"></i>
+                            <!-- ::before -->
+                            <a href="/"> کاراته یا بوکس؟ کدامیک برای mma بهتر هستند؟  </a>
+                        </li>
+
+                        <li>
+                            <!-- ::marker -->
+                            <i class="fa fa-angle-double-left"></i>
+                            <!-- ::before -->
+                            <a href="/">چگونه کاراته اوکیناوا با کاراته ژاپنی متفاوت است؟  </a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col-sm-4 hidden_xs"></div>
+
+                <div class="col-sm-4 col-xs-12">
+                    <h5>آخرین مقالات</h5>
+                    <p dir="rtl">:آدرس</p>
+                    <p dir="rtl">کردستان - بانه - خیابان صلاح الدین شمالی - ساختمان آفتاب درخشان - طبقه 4 شرکت ژیار سافت
+                    </p>
+                    <p dir="rtl">تلفن:08734263901</p>
+
+                </div>
+                <!-- ::after -->
+            </div>
+        </div>
+
+        <div class="copyright">
+            <div class="container">
+                <!-- ::before -->
+                <p class="pull-left">
+                    کلیه حقوق این سایت متعلق به شرکت ژیار سافت می باشد.
+                </p>
+                <!-- ::after -->
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
